# virtualize-nex-gddp-cmip6

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_inventory.py  test_version.py
virtualize_nex_gddp_cmip6/: __init__.py  inventory.py  run.py  store.py  virtualize.py
